# pokemonProject

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
templates/: index.html
